--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEO Agency for eCommerce Businesses</title>
+    <title>Aulti | SEO Agency for eCommerce Businesses</title>
 
     <!-- 
         - favicon link
@@ -268,6 +268,7 @@
                     </a>
                     <p class="section-text">
                         Helping eCommerce businesses grow with expert SEO strategies.
+                        Team@aulti.org
                     </p>
                 </div>
             </div>
